--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass src/scss:dist/css",
     "watch": "sass --watch src/scss:dist/css & live-server",
+    "format": "prettier --write",
     "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint src/**/*.js --fix",
-    "prepare": "husky install"
+    "lint-fix": "eslint src/**/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -33,14 +33,9 @@
   },
   "devDependencies": {
     "eslint": "^8.27.0",
-    "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "live-server": "^1.2.2",
     "prettier": "^2.7.1",
     "sass": "^1.56.1"
-  },
-  "lint-staged": {
-    "*.{js,html,scss}": "prettier --write",
-    "*.js": "eslint --fix"
   }
 }
