--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass src/scss:dist/css",
     "watch": "sass --watch src/scss:dist/css & live-server",
-    "format": "prettier --write",
+    "format": "prettier --write .",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --fix"
   },
@@ -35,6 +35,6 @@
     "eslint": "^8.27.0",
     "live-server": "^1.2.2",
     "prettier": "^2.7.1",
-    "sass": "^1.56.1"
+    "sass": "^1.55.0"
   }
 }
